Add ReadableStream and QueuingStrategy

--- a/crates/web-sys/Cargo.toml
+++ b/crates/web-sys/Cargo.toml
@@ -130,6 +130,7 @@ BrowserElementExecuteScriptOptions = []
 BrowserFeedWriter = []
 BrowserFindCaseSensitivity = []
 BrowserFindDirection = []
+ByteLengthQueuingStrategy = []
 Cache = []
 CacheBatchOperation = []
 CacheQueryOptions = []
@@ -198,6 +199,7 @@ ConvertCoordinateOptions = []
 ConvolverNode = []
 ConvolverOptions = []
 Coordinates = []
+CountQueuingStrategy = []
 Credential = []
 CredentialCreationOptions = []
 CredentialRequestOptions = []
@@ -778,11 +780,16 @@ PushSubscriptionJson = []
 PushSubscriptionKeys = []
 PushSubscriptionOptions = []
 PushSubscriptionOptionsInit = []
+QueuingStrategy = []
+QueuingStrategyOptions = []
 RadioNodeList = []
 Range = []
 RcwnPerfStats = []
 RcwnStatus = []
 ReadableStream = []
+ReadableStreamDefaultController = []
+ReadableStreamDefaultReader = []
+ReadableStreamReadResult = []
 RecordingState = []
 ReferrerPolicy = []
 RegisterRequest = []
@@ -1117,6 +1124,7 @@ UdpMessageEventInit = []
 UdpOptions = []
 UiEvent = []
 UiEventInit = []
+UnderlyingSource = []
 Url = []
 UrlSearchParams = []
 UserProximityEvent = []
