Update generated code

--- a/crates/web-sys/Cargo.toml
+++ b/crates/web-sys/Cargo.toml
@@ -118,6 +118,7 @@ BrowserElementExecuteScriptOptions = []
 BrowserFeedWriter = []
 BrowserFindCaseSensitivity = []
 BrowserFindDirection = []
+ByteLengthQueuingStrategy = []
 Cache = []
 CacheBatchOperation = []
 CacheQueryOptions = []
@@ -190,6 +191,7 @@ ConvertCoordinateOptions = []
 ConvolverNode = ["AudioNode", "EventTarget"]
 ConvolverOptions = []
 Coordinates = []
+CountQueuingStrategy = []
 Credential = []
 CredentialCreationOptions = []
 CredentialRequestOptions = []
@@ -872,11 +874,22 @@ PushSubscriptionJson = []
 PushSubscriptionKeys = []
 PushSubscriptionOptions = []
 PushSubscriptionOptionsInit = []
+QueuingStrategy = []
+QueuingStrategyInit = []
 RadioNodeList = ["NodeList"]
 Range = []
 RcwnPerfStats = []
 RcwnStatus = []
+ReadableByteStreamController = []
 ReadableStream = []
+ReadableStreamByobReader = []
+ReadableStreamByobRequest = []
+ReadableStreamDefaultController = []
+ReadableStreamDefaultReader = []
+ReadableStreamGetReaderOptions = []
+ReadableStreamIteratorOptions = []
+ReadableStreamReaderMode = []
+ReadableStreamType = []
 RecordingState = []
 ReferrerPolicy = []
 RegisterRequest = []
@@ -1040,6 +1053,7 @@ StorageEvent = ["Event"]
 StorageEventInit = []
 StorageManager = []
 StorageType = []
+StreamPipeOptions = []
 StyleRuleChangeEventInit = []
 StyleSheet = []
 StyleSheetApplicableStateChangeEventInit = []
@@ -1211,6 +1225,7 @@ UdpMessageEventInit = []
 UdpOptions = []
 UiEvent = ["Event"]
 UiEventInit = []
+UnderlyingSource = []
 Url = []
 UrlSearchParams = []
 UserProximityEvent = ["Event"]
